--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3",
+    "victory-native": "^36.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
